[package]
name = "web-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
axum-macros = "0.4.0"
full = "0.1.0"
futures = "0.3.30"
hyper = "1.1.0"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
