[package]
name = "netware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros"] }
axum-macros = "0.4.0"
bytes = "1.5.0"
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
fnv = "1.0.7"
full = "0.1.0"
futures = "0.3.30"
html5gum = "0.5.7"
hyper = "1.1.0"
hyper-staticfile = "0.10.0"
rayon = "1.8.1"
serde = "1.0.194"
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
